--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   </div>
   <div class="wrapper">
     <div class="error-container" id="error">
-
+      test
     </div>
     <div class="calc-row">
       <input id="input-first" placeholder="np. 1h 2m 3s" class="input theme-focus-border" type="text">
